<resources>

	<string name="app_name">MS Savings Calculator</string>
	<!--<string name="app_name">SavingsCalculatorCommon</string>-->
	<string name="client_statement_total">Client Total</string>
	<string name="statement_total">Statement Total</string>
	<string name="statement_total_exc_terminal">Total ex. Terminal</string>
	<string name="customer_terminal">Client Terminal</string>
	<string name="vendor_inc_pci">PCI DSS Fee</string>
	<string name="vendor_rate">Vendor Rate</string>
	<string name="vendor_terminal">Vendor Terminal</string>
	<string name="vendor_statement_total">Vendor Total</string>
	<string name="calculated_total">Cost</string>
	<string name="saving_percentage">Saving</string>
	<string name="savings_month">1 Month</string>
	<string name="saving_year">1 Year</string>
	<string name="saving_4years">4 Years</string>
	<string name="cc_short">CC</string>
	<string name="cc_long">CC Turnover</string>
	<string name="cc_rate">CC Rate</string>
	<string name="cc_rate_long">Credit Card Rate</string>
	<string name="cc_total">CC Total</string>
	<string name="bc_short">BC</string>
	<string name="bc_long">BC Turnover</string>
	<string name="bc_rate">BC Rate</string>
	<string name="bc_rate_long">Bank Card Rate</string>
	<string name="bc_total">BC Total</string>
	<string name="dc_short">DC</string>
	<string name="dc_long">DC Volume Total</string>
	<string name="dc_rate">DC Rate</string>
	<string name="dc_rate_long">Debit Card Rate</string>
	<string name="dc_total">DC Total</string>
	<string name="client_section_header">Client</string>
	<string name="vendor_section_header">Vendor</string>
	<string name="summary_section_header">Summary</string>
	<string name="savings_section_header">Saving</string>
	<string name="quote_calculation_section_heading">Calculation</string>
	<string name="saving_overall">Overall</string>
	<string name="incumbent_cost">Incumbent Cost</string>
	<string name="proposed_rate">Proposed Rates</string>

</resources>