<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

	<LinearLayout android:layout_width="match_parent"
	              android:layout_height="match_parent"
	              android:orientation="vertical"
	              android:isScrollContainer="true">
		<LinearLayout
				style="@style/linearLayoutRow"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

			<TextView
					android:id="@+id/savingsLabel"
					style="@style/leftAlignLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/saving_percentage"/>

			<TextView
					android:id="@+id/savingsPercentage"
					style="@style/centerAlignLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textIsSelectable="true"/>
		</LinearLayout>

		<LinearLayout
				style="@style/linearLayoutRow"
				android:layout_width="fill_parent"
				android:layout_height="37sp"
				android:layout_below="@+id/LinearLayout01">

			<TextView
					style="@style/leftAlignLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/savings_month"/>

			<TextView
					style="@style/leftAlignLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/saving_year"/>

			<TextView
					style="@style/leftAlignLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/saving_4years"/>
		</LinearLayout>

		<LinearLayout
				style="@style/linearLayoutRow"
				android:layout_width="fill_parent"
				android:layout_height="37sp"
				android:layout_below="@+id/LinearLayout9">

			<TextView
					android:id="@+id/Savings1Month"
					style="@style/leftAlignLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textIsSelectable="true"/>

			<TextView
					android:id="@+id/Savings1Year"
					style="@style/leftAlignLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textIsSelectable="true"/>

			<TextView
					android:id="@+id/Savings4Years"
					style="@style/leftAlignLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textIsSelectable="true"/>
		</LinearLayout>
	</LinearLayout>

</ScrollView>
