<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ScrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical|fill_horizontal"
            tools:context=".MainActivity">

    <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="20dp">

        <LinearLayout
                android:id="@+id/LinearLayout1"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp">

            <TextView
                    android:id="@+id/TextView01"
                    style="@style/rightAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:text="@string/statement_total_exc_terminal"/>

            <EditText
                    android:id="@+id/CSTotalExcTerminal"
                    style="@style/currencyInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                <!-- <requestFocus /> -->
            </EditText>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout2"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@id/LinearLayout1">

            <TextView
                    android:id="@+id/TextView02"
                    style="@style/rightAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:text="@string/customer_teminal"/>

            <EditText
                    android:id="@+id/CSTerminal"
                    style="@style/currencyInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout02"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/LinearLayout2">

            <TextView
                    android:id="@+id/CSTLabel"
                    style="@style/rightAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:text="@string/calculated_total"/>

            <TextView
                    android:id="@+id/CSTotal"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>
        </LinearLayout>

        <View
                android:id="@+id/sepLine01"
                style="@style/horizontalRule"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/LinearLayout02"/>

        <LinearLayout
                android:id="@+id/LinearLayout3"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/sepLine01">

            <TextView
                    android:id="@+id/spacer1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textIsSelectable="true"/>

            <TextView
                    android:id="@+id/TextView14"
                    style="@style/centerAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/statement_total"/>

            <TextView
                    android:id="@+id/lblVendorRate"
                    style="@style/centerAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vendor_rate"/>

            <TextView
                    android:id="@+id/TextView12"
                    style="@style/centerAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calculated_total"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout4"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/LinearLayout3">

            <TextView
                    android:id="@+id/TextView04"
                    style="@style/rightAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/cc_short"/>

            <EditText
                    android:id="@+id/CCST"
                    style="@style/currencyInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <EditText
                    android:id="@+id/CCFR"
                    style="@style/percentageInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/CCT"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout5"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/LinearLayout4">

            <TextView
                    android:id="@+id/TextView03"
                    style="@style/rightAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/bc_short"/>

            <EditText
                    android:id="@+id/BCST"
                    style="@style/currencyInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <EditText
                    android:id="@+id/BCFR"
                    style="@style/percentageInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/BCT"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout6"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/LinearLayout5">

            <TextView
                    android:id="@+id/textView1"
                    style="@style/rightAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/dc_short"/>

            <EditText
                    android:id="@+id/DCST"
                    style="@style/inputValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <EditText
                    android:id="@+id/DCFR"
                    style="@style/currencyInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/DCT"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout7"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/LinearLayout6"
                android:layout_marginTop="20dp">

            <TextView
                    android:id="@+id/lblVendorIncPci"
                    style="@style/rightAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/vendor_inc_pci"/>

            <EditText
                    android:id="@+id/FIncPciRate"
                    style="@style/percentageInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/FIncPci"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout8"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/LinearLayout7">

            <TextView
                    android:id="@+id/lblVendorTerminal"
                    style="@style/rightAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/vendor_terminal"/>

            <EditText
                    android:id="@+id/VendorTerminal"
                    style="@style/currencyInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/FpmsTerminalTotal"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>
        </LinearLayout>

        <View
                android:id="@+id/sepLine02"
                style="@style/horizontalRule"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/LinearLayout8"/>

        <LinearLayout
                android:id="@+id/LinearLayout01"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@id/sepLine02">

            <TextView
                    android:id="@+id/savingsLabel"
                    style="@style/centerAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saving_percentage"/>

            <TextView
                    android:id="@+id/savingsPercentage"
                    style="@style/leftAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textIsSelectable="true"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout9"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/LinearLayout01">

            <TextView
                    android:id="@+id/TextView08"
                    style="@style/centerAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/savings_month"/>

            <TextView
                    android:id="@+id/TextView11"
                    style="@style/centerAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saving_year"/>

            <TextView
                    android:id="@+id/TextView10"
                    style="@style/centerAlignLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saving_4years"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/LinearLayout10"
                style="@style/linearLayoutRow"
                android:layout_width="fill_parent"
                android:layout_height="37sp"
                android:layout_below="@+id/LinearLayout9">

            <TextView
                    android:id="@+id/Savings1Month"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>

            <TextView
                    android:id="@+id/Savings1Year"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>

            <TextView
                    android:id="@+id/Savings4Years"
                    style="@style/totalLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textIsSelectable="true"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>